--- a/app/src/main/res/drawable/ic_checked_magnifyingglass.xml
+++ b/app/src/main/res/drawable/ic_checked_magnifyingglass.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="6.5"
       android:fillColor="#00000000"
-      android:strokeColor="#646464"
+      android:strokeColor="#E5E5E5"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M41.109,41.109L52.5,52.5"
       android:strokeLineJoin="round"
       android:strokeWidth="6.5"
       android:fillColor="#00000000"
-      android:strokeColor="#646464"
+      android:strokeColor="#E5E5E5"
       android:strokeLineCap="round"/>
 </vector>
