--- a/app/src/main/res/drawable/ic_drop.xml
+++ b/app/src/main/res/drawable/ic_drop.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="70dp"
-    android:height="70dp"
+    android:width="70px"
+    android:height="70px"
     android:viewportWidth="70"
     android:viewportHeight="70">
   <path
