--- a/app/src/main/res/drawable/ic_house.xml
+++ b/app/src/main/res/drawable/ic_house.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="6.5"
       android:fillColor="#00000000"
-      android:strokeColor="#BABABA"
+      android:strokeColor="#E5E5E5"
       android:strokeLineCap="round"/>
 </vector>
