--- a/app/src/main/res/drawable/ic_leaf.xml
+++ b/app/src/main/res/drawable/ic_leaf.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="6.5"
       android:fillColor="#00000000"
-      android:strokeColor="#BABABA"
+      android:strokeColor="#E5E5E5"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M16.25,48.75C4.063,28.438 20.313,8.125 54.844,10.156C56.875,44.688 36.563,60.938 16.25,48.75Z"
       android:strokeLineJoin="round"
       android:strokeWidth="6.5"
       android:fillColor="#00000000"
-      android:strokeColor="#BABABA"
+      android:strokeColor="#E5E5E5"
       android:strokeLineCap="round"/>
 </vector>
