--- a/app/src/main/res/drawable/ic_rectangle_3.xml
+++ b/app/src/main/res/drawable/ic_rectangle_3.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="9dp"
-    android:height="88dp"
+    android:width="9px"
+    android:height="88px"
     android:viewportWidth="9"
     android:viewportHeight="88">
   <path
