--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -17,7 +17,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        app:itemIconSize="32dp"
+        app:itemIconSize="65px"
         android:layout_width="427px"
         android:layout_height="120px"
         android:layout_marginBottom="70px"
