--- a/app/src/main/res/layout/area_list.xml
+++ b/app/src/main/res/layout/area_list.xml
@@ -63,9 +63,9 @@
             android:layout_width="200px"
             android:layout_height="80px"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/search_view_bg"
+            android:background="@drawable/ic_gray_button"
             android:layout_marginTop="20px"
-            android:textColor="@color/gray"
+            android:textColor="@color/white"
             android:text="물주기"
             android:fontFamily="@font/nb"
             android:textSize="35px"
