--- a/app/src/main/res/layout/fragment_plant_detail.xml
+++ b/app/src/main/res/layout/fragment_plant_detail.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="60px"
-        android:layout_marginTop="110px"
+        android:layout_marginTop="50px"
         android:layout_marginRight="60px"
         android:layout_marginBottom="240px"
         app:cardCornerRadius="70px">
@@ -99,9 +99,10 @@
                         android:id="@+id/tv_content_detail"
                         android:layout_width="850px"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/nb"
+                        android:fontFamily="@font/nr"
+                        android:lineSpacingExtra="7px"
                         android:text="꽃색마다 담겨져 있는 의미가 다른 장미는 꽃의 대명사라 할 정도로 전세계 사람들이 가장 선호하는 꽃이다. 오래된 역사만큼이나 장미에 대한 이야기도 다양하다."
-                        android:textSize="32px" />
+                        android:textSize="24px" />
 
                 </LinearLayout>
 
@@ -127,9 +128,37 @@
                         android:id="@+id/tv_rasing_detail"
                         android:layout_width="850px"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/nb"
+                        android:fontFamily="@font/nr"
+                        android:lineSpacingExtra="7px"
                         android:text="꽃색마다 담겨져 있는 의미가 다른 장미는 꽃의 대명사라 할 정도로 전세계 사람들이 가장 선호하는 꽃이다. 오래된 역사만큼이나 장미에 대한 이야기도 다양하다."
-                        android:textSize="32px" />
+                        android:textSize="24px" />
+
+                </LinearLayout><LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20px"
+
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_use"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20px"
+                        android:textColor="@color/black"
+                        android:text="용법"
+                        android:fontFamily="@font/nb"
+                        android:textSize="32px"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_usage"
+                        android:layout_width="850px"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nr"
+                        android:lineSpacingExtra="7px"
+                        android:text="꽃색마다 담겨져 있는 의미가 다른 장미는 꽃의 대명사라 할 정도로 전세계 사람들이 가장 선호하는 꽃이다. 오래된 역사만큼이나 장미에 대한 이야기도 다양하다."
+                        android:textSize="24px" />
 
                 </LinearLayout>
             </LinearLayout>
