--- a/app/src/main/res/layout/plant_main_page.xml
+++ b/app/src/main/res/layout/plant_main_page.xml
@@ -14,6 +14,12 @@
         android:layout_marginRight="60px"
         android:layout_marginBottom="240px"
         app:cardCornerRadius="70px">
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            android:indeterminateTint="@color/gray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
 
         <ImageButton
             android:id="@+id/imageButton2"
@@ -21,6 +27,7 @@
             android:layout_height="70px"
             android:layout_marginLeft="40px"
             android:layout_marginTop="40px"
+
             android:background="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,6 +50,7 @@
             android:id="@+id/imageView"
             android:layout_width="42px"
             android:layout_height="42px"
+            android:scaleType="centerCrop"
             android:layout_marginStart="1550px"
             android:layout_marginTop="40px"
             app:srcCompat="@drawable/ic_drop" />
@@ -57,6 +65,7 @@
             android:textSize="32px" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/plant_info"
             android:layout_width="330px"
             android:layout_height="500px"
             android:layout_marginLeft="50px"
@@ -134,7 +143,10 @@
 <!--                android:padding="25px" />-->
 
         </LinearLayout>
+
+
     </androidx.cardview.widget.CardView>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
